# enterprise-it-automator

./: .dockerignore  .env.example  .gitignore  .trivyignore  DEPLOYMENT.md  Dockerfile  README.md  SECURITY.md  docker-compose.yml  pyproject.toml  render.yaml  requirements.lock.txt  requirements.txt
app/: config.py  logging_config.py  metrics.py
app/db/: seed.py  (+3 more)
data/: it_automator_checkpoints.db-shm  it_automator_checkpoints.db-wal
docs/: RUNBOOKS.md  THREAT-MODEL.md
evals/: __init__.py  adversarial.py  run_adversarial.py  runner.py
observability/: alert-rules.yml
scripts/: backup_db.sh  generate_tool_baseline.py  validate_backup_restore.sh
tests/: conftest.py  test_actionable_gate.py  test_adversarial_corpus.py  test_ag_ui_bridge.py  test_ag_ui_endpoints.py  test_api_client_scoping.py  test_app_access_tools.py  test_approval_target_mismatch.py  test_audit_chain.py  test_audit_export.py  test_audit_verify.py  test_auth.py  test_checkpointer_selection.py  test_circuit_breaker.py  test_circuit_breaker_integration.py  test_classify.py  test_client_token_budget.py  test_db_session.py  test_demo_api_key.py  test_demo_purge.py  test_domain_server_composition.py  test_employee_listing.py  test_employee_scoping_and_demo_reviewer.py  test_fanout.py  test_graph_routing.py  test_idempotency.py  test_init_db_concurrent_boot.py  test_llm_fallback.py  test_llm_provider.py  test_logging_config.py  test_mcp_gateway_auth.py  test_mcp_session_cache.py  test_mcp_token_exchange.py  test_mcp_transport.py  test_observability.py  test_rate_limit.py  test_rbac.py  test_registry.py  (+16 more)
(+42 files in other folders)
