[project]
name = "mcp-it-automator"
version = "0.1.0"
description = "MCP-Enabled Enterprise IT Automator: a LangGraph agent that automates employee onboarding/offboarding via a custom MCP server, with human-in-the-loop approval for sensitive actions."
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.2.0",
    "langgraph>=0.2.60",
    "langgraph-checkpoint-sqlite>=2.0.0",
    "langgraph-checkpoint-postgres>=2.0.0",
    "psycopg[binary]>=3.2.0",
    "langchain-core>=0.3.28",
    "langchain-groq>=0.2.3",
    "langchain-anthropic>=0.3.3",
    "langchain-ibm>=1.1.0",
    "langchain-openai>=1.3.0",
    "fastapi>=0.115.6",
    "uvicorn[standard]>=0.34.0",
    "sqlalchemy>=2.0.36",
    "pydantic>=2.10.4",
    "pydantic-settings>=2.7.1",
    "python-dotenv>=1.0.1",
    "aiosqlite>=0.20.0",
    "asyncpg>=0.30.0",
    "httpx>=0.28.1",
    "slowapi>=0.1.9",
    "gunicorn>=23.0.0",
    "opentelemetry-api>=1.29.0",
    "opentelemetry-sdk>=1.29.0",
    "opentelemetry-exporter-otlp-proto-http>=1.29.0",
    "ag-ui-protocol>=0.1.19",
]

[project.optional-dependencies]
dev = ["pytest>=8.3.4", "pytest-asyncio>=0.25.1", "ruff>=0.15.0"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
select = ["F"]
